# fpweek

./: .gitignore  .gitmodules  README.md  index.html  site.cabal  site.hs
_posts/: 2016-05-16-intro.md  2016-05-16-outro.md  2016-05-17-contact.md
css/: base.css  main.css
templates/: index.html  main.css  post-item.html  post-menu-item.html
