name:               site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base < 5
                  , containers
                  , filepath
                  , hakyll
                  , mtl >= 2.2.1
                  , pandoc
                  , time
  ghc-options:      -threaded
  default-language: Haskell2010
